--- a/Uncertainty/uncertainty-tidy-3.qmd
+++ b/Uncertainty/uncertainty-tidy-3.qmd
@@ -223,7 +223,9 @@ R programming $\rightarrow$ data analysis
 
 ## Reference
 
+- [Quantitative Social Science: An Introduction in tidyverse](https://press.princeton.edu/books/hardcover/9780691222271/quantitative-social-science)
 - [R for Data Science](https://r4ds.hadley.nz/functions.html#functions-are-for-humans-and-computers)
+- [Advanced R](https://adv-r.hadley.nz/)
 - Artwork by @[allison_horst](https://github.com/allisonhorst/stats-illustrations)
 
 
