--- a/Prediction/prediction_tidy_2.Rmd
+++ b/Prediction/prediction_tidy_2.Rmd
@@ -204,3 +204,12 @@ ggplot(y.hat, aes(x = age, y = pred)) +
   xlim(20, 90) +
   theme(legend.position = "bottom")
 ```
+
+## References
+- "Quantitative Social Science: An Introduction" - Kosuke Imai
+- "Quantitative Social Science: An Introduction in Tidyverse" - Kosuke Imai and Nora Webb Williams
+- [R for data science](https://r4ds.had.co.nz) - H.Wickham and G.Grolemund
+- [broom package](https://broom.tidymodels.org)
+- [modelr package](https://modelr.tidyverse.org)
+- [tidyr package](https://tidyr.tidyverse.org)
+
